# video-metadata

./: CMakeLists.txt  NALUS.txt  bitstream_parser_output.txt  encode_video_opencv  encode_video_opencv.cpp  h264_sei_pack.h  main.cpp  readme.md  readme.txt  test.h264
